--- a/ngLessonLocker/src/app/components/questions/questions.component.html
+++ b/ngLessonLocker/src/app/components/questions/questions.component.html
@@ -1,86 +1,92 @@
 <div *ngIf="!selected">
 
-    <div class="d-flex justify-content-between align-items-center my-3">
-      <h2>Questions</h2>
-      <button class="btn btn-primary" (click)="addNewQuestion()">Add New Question</button>
-    </div>
-    <table class="table table-striped table-hover">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Question</th>
-          <th scope="col">Hint</th>
-          <th scope="col">Explanation</th>
-          <th scope="col">Enabled</th>
-          <th scope="col">Updated At</th>
-          <th scope="col">Created At</th>
-          <th scope="col">Is Enabled</th>
-          <th scope="col" colspan="2">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let question of questions" (click)="selectQuestion(question)">
-          <td >{{ question.id }}</td>
-          <td>{{ question.question }}</td>
-          <td>{{ question.hint }}</td>
-          <td>{{ question.explanation }}</td>
-          <td>{{ question.enabled ? "Has been approved" : "Not yet approved" }}</td>
-          <td>{{ question.updatedAt }}</td>
-          <td>{{ question.createdAt }}</td>
-          <td>{{ question.enabled }}</td>
-          <td>
-            <button class="btn btn-warning btn-sm" (click)="editQuestion(question); $event.stopPropagation()">Edit</button>
-         </td>
-          <td>
-            <button class="btn btn-danger btn-sm" (click)="deleteQuestion(question.id); $event.stopPropagation()">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="d-flex justify-content-between align-items-center my-3">
+    <h2>Questions</h2>
+    <button class="btn btn-primary" (click)="addNewQuestion()">Add New Question</button>
   </div>
-  <section class="bg-light rounded">
+  <table class="table table-striped table-hover">
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Question</th>
+        <th scope="col">Hint</th>
+        <th scope="col">Explanation</th>
+        <th scope="col">Enabled</th>
+        <th scope="col">Updated At</th>
+        <th scope="col">Created At</th>
+        <th scope="col">Is Enabled</th>
+        <th scope="col" colspan="2">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let question of questions" (click)="selectQuestion(question)">
+        <td>{{ question.id }}</td>
+        <td>{{ question.question }}</td>
+        <td>{{ question.hint }}</td>
+        <td>{{ question.explanation }}</td>
+        <td>{{ question.enabled ? "Has been approved" : "Not yet approved" }}</td>
+        <td>{{ question.updatedAt }}</td>
+        <td>{{ question.createdAt }}</td>
+        <td>{{ question.enabled }}</td>
+        <td>
+          <button class="btn btn-warning btn-sm"
+            (click)="editQuestion(question); $event.stopPropagation()">Edit</button>
+        </td>
+        <td>
+          <button class="btn btn-danger btn-sm"
+            (click)="deleteQuestion(question.id); $event.stopPropagation()">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<section class="bg-light rounded">
 
-    <div *ngIf="this.selected!==null" class="container"
-        [ngClass]="selected.enabled ? 'border-success' : 'border-danger'">
-        <div class="container">
-          <div class="row">
-              <div class="col">
-                  <h1 class="text-center">Question view component</h1>
-              </div>
-          </div>
+  <div *ngIf="this.selected!==null" class="container" [ngClass]="selected.enabled ? 'border-success' : 'border-danger'">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center">Question view component</h1>
+        </div>
       </div>
-  
-      <button type="button" class="btn btn-success mt-4" (click)="deselectQuestion()">Back</button>
-        <div class="row">
-            <div class="col">
-                <p><span>Id:</span> {{selected.id}}</p>
-
-                <pre><span>Question:</span> {{selected.question}} </pre> 
-
-                <pre><span>Hint:</span> {{selected.hint}}</pre>
-
-                <p><span>Explanation:</span> {{selected.explanation}}</p>
-
-                <pre><span>Enabled:</span> {{selected.enabled}}</pre>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p>Choices:</p>
-                <ul>
-                    <li *ngFor="let choice of selected.choices" title="{{choice.explanation}}">
-                        {{choice.content}}</li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p>Tags:</p>
-                <ul>
-                    <li *ngFor="let choice of selected.tags">{{choice.title}}</li>
-                </ul>
-            </div>
-        </div>
     </div>
+
+    <div class="row">
+      <div class="col">
+        <p><span>Id:</span><br>{{selected.id}}</p>
+        <pre><span>Question:</span><br>{{selected.question}} </pre>
+        <pre><span>Hint:</span><br>{{selected.hint}}</pre>
+        <p><span>Explanation:</span><br>{{selected.explanation}}</p>
+        <pre><span>Enabled:</span><br>{{selected.enabled}}</pre>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>Choices:</p>
+        <!-- <ul>
+          <li *ngFor="let choice of selected.choices" title="{{choice.explanation}}">
+            {{choice.content}}</li>
+        </ul> -->
+        <ul>
+          <li *ngFor="let choice of selected.choices">{{ choice.content }} <span *ngIf="choice.correct"
+              [ngClass]="choice.correct ? 'text-success' : 'text-danger'">(Correct)</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p>Tags:</p>
+        <ul>
+          <li *ngFor="let choice of selected.tags">{{choice.title}}</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <button type="button" class="btn btn-success mt-4 w-100" (click)="deselectQuestion()">Back</button>
+    </div>
+  </div>
 
 </section>
