--- a/ngLessonLocker/src/app/components/questions/questions.component.html
+++ b/ngLessonLocker/src/app/components/questions/questions.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!selected">
 
   <div class="d-flex justify-content-between align-items-center my-3">
-    <h2>Questions</h2>
+    <h2>Your Questions</h2>
     <button class="btn btn-primary" (click)="addNewQuestion()">Add New Question</button>
   </div>
   <table class="table table-striped table-hover">
