--- a/ngLessonLocker/src/app/components/quizzes/quizzes.component.css
+++ b/ngLessonLocker/src/app/components/quizzes/quizzes.component.css
@@ -3,7 +3,7 @@ tr:hover {
 }
 
 td,th {
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd; */
     padding: 8px;
 }
 
@@ -12,17 +12,21 @@ a {
     font-size: 18px;
     text-decoration: none;
     color: black;
-    border: 1px solid green;
-    box-shadow: 2px 2px 2px #888888;
+    /* border: 1px solid green; */
+    /* box-shadow: 2px 2px 2px #888888; */
 }
 
 a:hover {
     color: blue;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 a:active {
     color: red;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     box-shadow: 1px 1px 1px #666666;
+}
+
+table,tr,th,thead,td {
+    border: 1px solid grey;
 }
