--- a/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.html
+++ b/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.html
@@ -167,6 +167,7 @@
     <div class="container">
         <div class="row">
 
+            <!-- NOTE: The class d-none below -->
             <div class="col">
                 <button class="btn btn-outline-warning m-2"
                     (click)="this.storeSelectedQuizIdInLocalStorage(this?.selectedQuizId||0)">Select
