--- a/ngLessonLocker/src/app/components/question-modify/question-modify.component.html
+++ b/ngLessonLocker/src/app/components/question-modify/question-modify.component.html
@@ -53,8 +53,8 @@
                 </div> -->
 
                 <div class="mt-4">
-                    <button type="submit" class="btn btn-success">Save</button>
-                    <button type="button" class="btn btn-secondary" (click)="cancel()">Cancel</button>
+                    <button type="submit" class="btn btn-success m-2">Save</button>
+                    <button type="button" class="btn btn-secondary m-2" (click)="cancel()">Cancel</button>
                 </div>
             </form>
         </div>
