--- a/ngLessonLocker/src/app/app.component.html
+++ b/ngLessonLocker/src/app/app.component.html
@@ -1,4 +1,16 @@
-<main class="container-fluid"> 
-  <app-navigation></app-navigation> 
+<main class="container-fluid">
+  <app-navigation></app-navigation>
+  <!-- <div class="container">
+    <div class="row">
+      <div class="col text-center">
+        <app-map></app-map>
+      </div>
+      <div class="row">
+        <div class="col">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div> -->
   <router-outlet></router-outlet>
 </main>
